Ensure alert message is read by screen reader and fix spacing of checkbox / radios

--- a/src/components/field/_field.scss
+++ b/src/components/field/_field.scss
@@ -30,8 +30,12 @@
   }
 
   & > &__item {
-    margin: 1rem 0 0;
+    margin: 0 0 0.5rem;
     width: 100%;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     @include mq(m) {
       &:not([class*='field__item--w-']) {
